prevent text from wrapping on index.html

--- a/style.css
+++ b/style.css
@@ -36,14 +36,16 @@ header {
   text-align: center;
   color: #2b4a59;
   font-size: 8em; 
+  white-space: nowrap; /* Prevent text from wrapping */
 }
 
 .indexHeader h2 {
-  margin-top: 0;
+  margin-top: -10px;
   text-align: center;
   color: #2b4a59;
   font-weight: normal;
   font-size: 6em;
+  white-space: nowrap; /* Prevent text from wrapping */
 }
 
 .libraryheader h1 {
